--- a/mat383/static/style.css
+++ b/mat383/static/style.css
@@ -8,6 +8,25 @@ body {
 	color: #ccc ;
 }
 
+header {
+	
+}
+
+.headerbar {
+	display: inline;
+	content: block;
+}
+
+.headerbar h1 {
+	float: left;
+}
+
+.headerbar li {
+	float: right;
+	list-style-type: none;
+	padding-right: 8px;
+}
+
 main {
 	max-width: 800px ;
 	margin: auto ;
