--- a/mat383/layouts/_default/baseof.html
+++ b/mat383/layouts/_default/baseof.html
@@ -19,10 +19,11 @@
 <main>
 <header>
 	<div class="headerbar">
-		<h1 id="tag_{{ .Title }}">mat383.com</h1>
 		<ul>
-			<li>text1</li>
+			<li style="float:left"><h1>mat383.com</h1></li>
+			<li>text3</li>
 			<li>text2</li>
+			<li>text1</li>
 		</ul>
 	</div>
 </header>
