--- a/mat383/static/style.css
+++ b/mat383/static/style.css
@@ -1,30 +1,37 @@
 html {
 	background-color: #121212;
-	padding: 10px;
+	font-family: sans-serif;
+	color: #ccc;
 }
 
 body {
-	font-family: sans-serif ;
-	color: #ccc ;
+	margin: 0px;
 }
 
-header {
-	
+/* Headerbar stuff */
+.headerbar ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 2px 20px 2px 10px;
+	overflow: hidden;
+	background-color: #202020;
+	height: 80px;
+	position: relative;
 }
-
-.headerbar {
-	display: inline;
-	content: block;
-}
-
-.headerbar h1 {
-	float: left;
-}
-
 .headerbar li {
 	float: right;
-	list-style-type: none;
-	padding-right: 8px;
+	margin: 0 0 0 10px;
+	position: relative;
+	top: 50%;
+	-ms-transform: translateY(-50%);
+	transform: translateY(-50%);
+}
+.headerbar a {
+	display: block;
+	color: white;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
 }
 
 main {
