--- a/mat383/layouts/_default/baseof.html
+++ b/mat383/layouts/_default/baseof.html
@@ -12,6 +12,7 @@
 	{{ end -}}
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="robots" content="index, follow">
+	<meta name="darkreader-lock">
 	<meta charset="utf-8">
 </head>
 <nav class="navbar">
