--- a/mat383/static/style.css
+++ b/mat383/static/style.css
@@ -99,6 +99,23 @@ main {
 	margin: auto 10px auto 10px;
 }
 
+/* Post previews */
+.postpreview {
+	list-style-type: none;
+	margin: auto 20px auto 20px;
+}
+div.postpreview {
+	margin-bottom: 10px;
+	padding-left: 8px;
+	border-width: 0px 0px 0px 3px;
+	border-style: solid;
+	border-color: var(--green);
+	
+}
+.postpreview time {
+	font-size: 10px;
+}
+
 img {
 	max-width: 100% ;
 }
