--- a/mat383/layouts/_default/list.html
+++ b/mat383/layouts/_default/list.html
@@ -9,16 +9,28 @@
 {{- range .Site.RegularPages -}}
 {{- if eq (substr .RelPermalink 0 7) "/posts/" }}
 <div class="postpreview">
-    {{- if .Param "datesinlist" -}}
-        <time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">{{ .Date.Format "2006 Jan 02" }}</time>
-    {{- end -}}
+	{{- if .Param "datesinlist" -}}
+		<time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">{{ .Date.Format "2006 Jan 02" }}</time>
+	{{- end -}}
 	<br>
-	<a href="{{ .RelPermalink }}">{{ .Title }}</a>
-    {{- if .Param "authorsinlist" }}
-    {{ with .Params.authors }}
-        by 
-        {{ delimit . ", " " and " }}
+
+	{{- if .Param "authorsinlist" }}
+		{{ with .Params.authors }}
+    	by 
+    	{{ delimit . ", " " and " }}
     {{end}}
+
+	<a href="{{ .RelPermalink }}">{{ .Title }}</a>
+
+	{{ if .Params.summary }}
+		<div class="postpreviewsummary">{{ .Params.summary }}</div>
+	{{ end }}
+
+	{{ if .Params.coverImage }}
+		<img src="{{ .Params.coverImage }}" class="postpreviewimg">
+	{{ end }}
+
+    
     {{ end -}}
 </div>
 {{- end }}
