--- a/mat383/static/style.css
+++ b/mat383/static/style.css
@@ -102,18 +102,17 @@ main {
 /* Post previews */
 .postpreview {
 	list-style-type: none;
-	margin: auto 20px auto 20px;
-}
-div.postpreview {
-	margin-bottom: 10px;
+	margin: auto 20px 10px 20px;
 	padding-left: 8px;
 	border-width: 0px 0px 0px 3px;
 	border-style: solid;
 	border-color: var(--green);
-	
 }
 .postpreview time {
 	font-size: 10px;
+}
+.postpreviewsummary {
+	margin-top: 5px;
 }
 
 img {
