--- a/mat383/layouts/_default/baseof.html
+++ b/mat383/layouts/_default/baseof.html
@@ -18,9 +18,9 @@
 <nav class="navbar">
 	<a href="/" class="homelink">mat383.com</a>
 	<div class="otherlinks"> <!--If the current page is equal to this URL, give it a CSS class (might have to change this later)-->
-		<a href="/posts" class="{{if eq .RelPermalink "/blog/" }}activepage{{ end }}">Blog</a>
-		<a href="/projects" class="{{if eq .RelPermalink "/projects/" }}activepage{{ end }}">Projects</a>
-		<a href="/about" class="{{if eq .RelPermalink "/about/" }}activepage{{ end }}">About</a>
+		<a href="/posts" class="{{if hasPrefix .RelPermalink "/posts/" }}activepage{{ end }}">Blog</a>
+		<a href="/projects" class="{{if hasPrefix .RelPermalink "/projects/" }}activepage{{ end }}">Projects</a>
+		<a href="/about" class="{{if hasPrefix .RelPermalink "/about/" }}activepage{{ end }}">About</a>
 	</div>
 </nav>
 <body>
