--- a/mat383/layouts/_default/baseof.html
+++ b/mat383/layouts/_default/baseof.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ .Site.Language }}">
 <head>
-	<title>{{ if not .IsHome }}{{ .Title | title }} | {{ end }}{{ .Site.Title }}</title>
+	<title>{{ if not .IsHome }}{{ .Title | title }} - {{ end }}{{ .Site.Title }}</title>
 	<link rel="canonical" href="{{ .Site.BaseURL }}">
 	<link rel='alternate' type='application/rss+xml' title="{{ .Site.Title }} RSS" href='/index.xml'>
 	<link rel='stylesheet' type='text/css' href='/style.css'>
@@ -26,9 +26,8 @@
 <body>
 <!--{{ if .Site.Menus.main }}{{ partial "nav.html" . }}{{ end -}}-->
 <main>
+<header><h1 id="tag_{{ .Title }}">{{ block "title" . }}{{ end }}</h1></header>
 {{ if .IsHome }}
-	<p>This website is coming together, watch me make it in real-time!</p>
-	<p>Lorem ipsum dolor sit ads amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Gravida arcu ac tortor dignissim convallis. Vel fringilla est ullamcorper eget nulla facilisi etiam. Scelerisque mauris pellentesque pulvinar pellentesque habitant morbi tristique senectus et. Odio ut sem nulla pharetra diam sit amet nisl suscipit. Eget magna fermentum iaculis eu non diam phasellus vestibulum. Sit amet nisl suscipit adipiscing bibendum est ultricies integer quis. Amet volutpat consequat mauris nunc congue nisi vitae suscipit tellus. Commodo nulla facilisi nullam vehicula ipsum a. Lacus sed viverra tellus in hac habitasse.</p>
 {{ end }}
 
 {{ block "main" . }}
