Updated markdown formatting, moved tag list, updated post previews

--- a/mat383/layouts/_default/baseof.html
+++ b/mat383/layouts/_default/baseof.html
@@ -26,7 +26,11 @@
 <body>
 <!--{{ if .Site.Menus.main }}{{ partial "nav.html" . }}{{ end -}}-->
 <main>
-<header><h1 id="tag_{{ .Title }}">{{ block "title" . }}{{ end }}</h1></header>
+<header>
+	{{ if .Param "taglist" }}{{ partial "taglist.html" . }}{{ end -}}
+	<h1 id="tag_{{ .Title }}" class="pagetitle">{{ block "title" . }}{{ end }}</h1>
+	{{ if .Param "summary" }}<p class="pagesummary">{{ .Summary }}</p>{{ end }}
+</header>
 {{ if .IsHome }}
 {{ end }}
 
@@ -34,7 +38,6 @@
 {{ .Content }}
 {{ end }}
 <!--{{ if .Param "nextprev" }}{{ partial "nextprev.html" . -}}{{ end -}}-->
-{{ if .Param "taglist" }}{{ partial "taglist.html" . }}{{ end -}}
 </main>
 {{ block "footer" . }}
 <footer>
