Titles of post preview links now get underlined when hovered

--- a/mat383/static/style.css
+++ b/mat383/static/style.css
@@ -146,6 +146,11 @@ main {
 		color: var(--green);
 	}
 }
+.postpreviewlink:hover {
+	.postpreviewtitle {
+		text-decoration: underline;
+	}
+}
 .postpreview time {
 	font-size: 10px;
 }
