--- a/mat383/static/style.css
+++ b/mat383/static/style.css
@@ -7,6 +7,7 @@
 	--green: rgb(0, 180, 0);
 	--greenbg: rgba(0, 180, 0, 0.2);
 	--select: rgb(240, 240, 240);
+	--selectbg: rgb(240, 240, 240, 0.2);
 }
 
 html {
@@ -61,12 +62,17 @@ a:hover {
 .otherlinks a:hover {
 	border-color: var(--select);
 	border-width: 0 0 2px 0;
+	background-image: none;
 }
 /* Make the active page navbar link green */
 a.activepage {
 	color: var(--green);
 	border-color: var(--green);
-	border-width: 0 0 3px 0;
+	border-width: 0 0 2px 0;
+	@supports (background-image: linear-gradient(to top, var(--greenbg), transparent)) {
+		background-color: transparent;
+		background-image: linear-gradient(to top, var(--greenbg), transparent);
+	}
 }
 
 /* Adjust navbar on small screens */
