--- a/mat383/layouts/_default/list.html
+++ b/mat383/layouts/_default/list.html
@@ -7,53 +7,80 @@
 
 {{/* The logic for listing all pages/posts had to be duplicated because I couldn't figure out how to not have to do it. Setting variables in IF statements keeps those variables in the scope of the IF statement. I also tried using partials but I couldn't get it to work. If you have a solution for this, PLEASE HELP */}}
 
+{{/* Also this file and the CSS for the post preview may have gotten really bloated, it's a bit messy and some code might be redundant */}}
+
+
 {{ if eq .RelPermalink "/" }}
 	{{- range where .Site.RegularPages "Section" "blog" }}
-			<a href="{{ .RelPermalink }}" class="postpreviewlink"><div class="postpreview">
-			{{- if .Param "datesinlist" -}}
-				<time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">{{ .Date.Format "2006 Jan 02" }}</time>
-			{{- end -}}
-			<br>
+		<a href="{{ .RelPermalink }}" class="postpreviewlink">
+			<div class="postpreview activateposttitleunderline">
+				<div style="display: grid;grid-template-columns: auto auto 1fr;" class=" activateposttitleunderline">
+					<div class="postpreviewtime activateposttitleunderline">
+						{{- if .Param "datesinlist" -}}
+							<time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">{{ .Date.Format "2006 Jan 02" }}</time>
+						{{- end -}}
+					</div>
+					<div class="postpreviewtags">
+						{{ if .Param "taglist" }}{{ partial "taglist.html" . }}{{ end -}}
+						<a href="{{ .RelPermalink }}" class="postpreviewlink">
+					</div>
+				</div>
+				
+				
+				{{- if .Param "authorsinlist" }}
+					{{ with .Params.authors }}
+					by 
+					{{ delimit . ", " " and " }}
+				{{end}}
 
-			{{- if .Param "authorsinlist" }}
-				{{ with .Params.authors }}
-				by 
-				{{ delimit . ", " " and " }}
-			{{end}}
+				<div class="postpreviewtitle">
+					{{ .Title }}
+				</div>
 
-			<div class="postpreviewtitle">{{ .Title }}</div>
+				{{ if .Params.summary }}
+					<div class="postpreviewsummary">{{ .Params.summary }}</div>
+				{{ end }}
 
-			{{ if .Params.summary }}
-			<div class="postpreviewsummary">{{ .Params.summary }}</div>
-			{{ end }}
-
-			{{ end -}}
-		</div></a><br>
+				{{ end -}}
+			</div>
+		</a>
 	{{- end }}
 
 {{ else }}
 
 	{{- range .Pages }}
-		<a href="{{ .RelPermalink }}" class="postpreviewlink"><div class="postpreview">
-			{{- if .Param "datesinlist" -}}
-				<time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">{{ .Date.Format "2006 Jan 02" }}</time>
-			{{- end -}}
-			<br>
-
+	<a href="{{ .RelPermalink }}" class="postpreviewlink">
+		<div class="postpreview activateposttitleunderline">
+			<div style="display: grid;grid-template-columns: auto auto 1fr;" class=" activateposttitleunderline">
+				<div class="postpreviewtime activateposttitleunderline">
+					{{- if .Param "datesinlist" -}}
+						<time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">{{ .Date.Format "2006 Jan 02" }}</time>
+					{{- end -}}
+				</div>
+				<div class="postpreviewtags">
+					{{ if .Param "taglist" }}{{ partial "taglist.html" . }}{{ end -}}
+					<a href="{{ .RelPermalink }}" class="postpreviewlink">
+				</div>
+			</div>
+			
+			
 			{{- if .Param "authorsinlist" }}
 				{{ with .Params.authors }}
 				by 
 				{{ delimit . ", " " and " }}
 			{{end}}
 
-			<div class="postpreviewtitle">{{ .Title }}</div>
+			<div class="postpreviewtitle">
+				{{ .Title }}
+			</div>
 
 			{{ if .Params.summary }}
-			<div class="postpreviewsummary">{{ .Params.summary }}</div>
+				<div class="postpreviewsummary">{{ .Params.summary }}</div>
 			{{ end }}
 
 			{{ end -}}
-		</div></a><br>
+		</div>
+	</a>
 	{{- end }}
 {{ end }}
 
