--- a/mat383/static/style.css
+++ b/mat383/static/style.css
@@ -15,16 +15,15 @@ html {
 	font-family: sans-serif;
 	color: var(--textwhite);
 }
-
 a {
 	color: var(--green);
 	text-underline-offset: 3px;
 	text-decoration-line: none;
 }
-a:hover {	
+
+a:hover:not(.postpreviewlink) {	
 	text-decoration-line: underline;
 }
-
 
 
 /* Headerbar stuff */
@@ -135,13 +134,12 @@ main {
 .postpreview {
 	list-style-type: none;
 	margin: auto 20px 10px 20px;
-	padding-left: 8px;
 	border-width: 0px 0px 0px 3px;
 	border-style: solid;
 	border-color: var(--green);
+	padding: 6px 10px 5px 8px;
     display: inline-block;
 	flex-direction: column;
-	padding: 2px 10px 5px 8px;
 }
 .postpreview:hover {
 	background-color: var(--greenbg);
@@ -157,16 +155,21 @@ main {
 		color: var(--green);
 	}
 }
-.postpreviewlink:hover {
+.activateposttitleunderline:hover {
 	.postpreviewtitle {
 		text-decoration: underline;
 	}
 }
-.postpreview time {
+.postpreviewtime {
+	font-size: 10px;
+	padding-right: 4px;
+	padding-bottom: 3px;
+}
+.postpreviewtags {
 	font-size: 10px;
 }
 .postpreviewsummary {
-	margin-top: 5px;
+	padding-top: 5px;
 }
 img {
 	max-width: 100% ;
