--- a/mat383/static/style.css
+++ b/mat383/static/style.css
@@ -117,7 +117,8 @@ main {
 
 .posttags {
 	text-align: center;
-	margin-top: 20px;
+	margin: 20px auto auto auto;
+	width: fit-content;
 	opacity: 0.4;
 	a {
 		color: var(--textwhite)
