--- a/mat383/static/style.css
+++ b/mat383/static/style.css
@@ -2,7 +2,7 @@
 replace all to edit them because some old browsers don't support CSS variables
 textwhite: #ccc;
 navbarbg: #202020;
-green: rgb(0, 180, 0);
+green: ;
 greenbg: rgba(0, 180, 0, 0.2);
 select: rgb(240, 240, 240);
 selectbg: rgb(240, 240, 240, 0.2);
@@ -29,7 +29,6 @@ a {
 a:hover:not(.postpreviewlink) {	
 	text-decoration-line: underline;
 }
-
 
 /* Headerbar stuff */
 .navbar {
@@ -191,9 +190,57 @@ main {
 }
 
 
+li {
+	margin-bottom: 8px;
+}
+code {
+	padding: 8px;
+	background-color: #202020;
+	border-style: solid;
+	border-color: #585858;
+	border-radius: 10px;
+	display: inline-block;
+}
+dt {
+	margin-bottom: 5px;
+}
+dd, blockquote {
+	margin: 0 20px 0 20px;
+	border-width: 0px 0px 0px 3px;
+	border-style: solid;
+	border-color: #ccc;
+	padding: 2px 10px 2px 8px;
+}
+blockquote {
+	margin-left: 30px;
+	padding-left: 15px;
+}
+table, th, td {
+	padding: 5px;
+	border: 2px solid;
+	border-color: #ccc;
+	border-collapse: collapse;
+	th, td {
+		border: 1px solid;
+
+	}
+}
+em.green {
+	color: rgb(125, 255, 125);
+	font-style: normal;
+}
 
 img {
-	max-width: 100% ;
+	max-width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+}
+.figcaption {
+	text-align: center;
+	display: block;
+	margin: 8px auto 8px auto;
+	font-style: italic;
 }
 
 footer {
