--- a/mat383/static/style.css
+++ b/mat383/static/style.css
@@ -75,32 +75,6 @@ a.activepage {
 	}
 }
 
-/* Adjust navbar on small screens */
-@media (max-width: 400px) {
-	.homelink {
-		font-size: 125%;
-	}
-	.homelink, .otherlinks {
-		gap: 10px;
-	}
-}
-@media (max-width: 340px) {
-	.navbar {
-		flex-direction: column;
-		align-items: center;
-	}
-}
-/* Suuuuuper small screens, like smartwatches lol */
-@media (max-width: 170px) {
-	.homelink {
-		font-size: 100%;
-	}
-	.otherlinks {
-		flex-direction: column;
-		align-items: center;
-		row-gap: 4px;
-	}
-}
 
 
 
@@ -130,14 +104,12 @@ main {
 		color: rgb(0, 180, 0)
 	}
 }
-
 .pagetitle {
 	text-align: center;
 	font-weight: normal;
 	font-size: 48px;
 	margin-top: 15px;
 }
-
 .pagesummary {
 	font-style: italic;
 	margin: auto;
@@ -145,7 +117,69 @@ main {
 	padding: 0 25px 0 25px;
 	text-align: center;
 }
+li {
+	margin-bottom: 8px;
+}
+code {
+	padding: 8px;
+	background-color: #202020;
+	border-style: solid;
+	border-color: #585858;
+	border-radius: 10px;
+	display: block;
+	max-width: fit-content;
+	text-wrap: wrap;
+	word-wrap: break-word;
+}
+dt {
+	margin-bottom: 5px;
+}
+dd, blockquote {
+	margin: 0 20px 0 20px;
+	border-width: 0px 0px 0px 3px;
+	border-style: solid;
+	border-color: #ccc;
+	padding: 2px 10px 2px 8px;
+}
+blockquote {
+	margin-left: 30px;
+	padding-left: 15px;
+}
+.scrollabletable {
+	overflow-x: auto;
+}
+table, th, td {
+	padding: 5px;
+	border: 2px solid;
+	border-color: #ccc;
+	border-collapse: collapse;
+	th, td {
+		border: 1px solid;
 
+	}
+}
+em.green {
+	color: rgb(125, 255, 125);
+	font-style: normal;
+}
+
+img, video {
+	max-width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+}
+.figcaption {
+	text-align: center;
+	display: block;
+	margin: 8px auto 8px auto;
+	font-style: italic;
+}
+
+footer {
+	text-align: center ;
+	clear: both ;
+}
 
 
 /* Post previews */
@@ -189,65 +223,6 @@ main {
 	padding-top: 5px;
 }
 
-
-li {
-	margin-bottom: 8px;
-}
-code {
-	padding: 8px;
-	background-color: #202020;
-	border-style: solid;
-	border-color: #585858;
-	border-radius: 10px;
-	display: inline-block;
-}
-dt {
-	margin-bottom: 5px;
-}
-dd, blockquote {
-	margin: 0 20px 0 20px;
-	border-width: 0px 0px 0px 3px;
-	border-style: solid;
-	border-color: #ccc;
-	padding: 2px 10px 2px 8px;
-}
-blockquote {
-	margin-left: 30px;
-	padding-left: 15px;
-}
-table, th, td {
-	padding: 5px;
-	border: 2px solid;
-	border-color: #ccc;
-	border-collapse: collapse;
-	th, td {
-		border: 1px solid;
-
-	}
-}
-em.green {
-	color: rgb(125, 255, 125);
-	font-style: normal;
-}
-
-img, video {
-	max-width: 100%;
-	margin-left: auto;
-	margin-right: auto;
-	display: block;
-}
-.figcaption {
-	text-align: center;
-	display: block;
-	margin: 8px auto 8px auto;
-	font-style: italic;
-}
-
-footer {
-	text-align: center ;
-	clear: both ;
-}
-
 /* For TAGLIST.HTML */
 .taglist {
 	text-align: center ;
@@ -267,4 +242,39 @@ footer {
 }
 #nextart,#prevart {
 	max-width: 33% ;
+}
+
+
+/* Adjust responsiveness on small screens */
+@media (max-width: 400px) {
+	.homelink {
+		font-size: 125%;
+	}
+	.homelink, .otherlinks {
+		gap: 10px;
+	}
+
+	.pagetitle {
+		font-size: 34px;
+	}
+	.pagesummary {
+		padding: 0 0 0 0;
+	}
+}
+@media (max-width: 340px) {
+	.navbar {
+		flex-direction: column;
+		align-items: center;
+	}
+}
+/* Suuuuuper small screens, like smartwatches lol */
+@media (max-width: 170px) {
+	.homelink {
+		font-size: 100%;
+	}
+	.otherlinks {
+		flex-direction: column;
+		align-items: center;
+		row-gap: 4px;
+	}
 }
