Added /blog/ content and tags look like tags

--- a/mat383/layouts/_default/baseof.html
+++ b/mat383/layouts/_default/baseof.html
@@ -27,8 +27,8 @@
 <!--{{ if .Site.Menus.main }}{{ partial "nav.html" . }}{{ end -}}-->
 <main>
 <header>
-	{{ if .Param "tags" }}<div class="posttags"><p>Tags: {{ partial "taglist.html" . }}</p></div>{{ else if not .IsHome }}<br>{{ end -}}
-	<h1 id="tag_{{ .Title }}" class="pagetitle">{{ block "title" . }}{{ end }}</h1>
+	{{ if .Param "tags" }}<div class="posttags"><p>Tags: {{ partial "taglist.html" . }}</p></div>{{ else if not (.Param "hidetitle")}}<br>{{ end -}}
+	{{ if not (.Param "hidetitle") }}<h1 id="tag_{{ .Title }}" class="pagetitle">{{ block "title" . }}{{ end }}</h1>{{ end }}
 	{{ if .Param "summary" }}<p class="pagesummary">{{ .Summary }}</p>{{ end }}
 </header>
 {{ if .IsHome }}
