--- a/mat383/layouts/_default/list.html
+++ b/mat383/layouts/_default/list.html
@@ -12,20 +12,17 @@
 
 {{ if eq .RelPermalink "/" }}
 	{{- range where .Site.RegularPages "Section" "blog" }}
-		<a href="{{ .RelPermalink }}" class="postpreviewlink">
+		<a href="{{ .RelPermalink }}" class="postpreviewlink postpreviewtime">
 			<div class="postpreview activateposttitleunderline">
 				<div style="display: grid;grid-template-columns: auto auto 1fr;" class=" activateposttitleunderline">
-					<div class="postpreviewtime activateposttitleunderline">
 						{{- if .Param "datesinlist" -}}
 							<time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">{{ .Date.Format "2006 Jan 02" }}</time>
 						{{- end -}}
-					</div>
 					<div class="postpreviewtags">
 						{{ if .Param "taglist" }}{{ partial "taglist.html" . }}{{ end -}}
-						<a href="{{ .RelPermalink }}" class="postpreviewlink">
 					</div>
+					<a href="{{ .RelPermalink }}" class="postpreviewlink">
 				</div>
-				
 				
 				{{- if .Param "authorsinlist" }}
 					{{ with .Params.authors }}
@@ -49,38 +46,35 @@
 {{ else }}
 
 	{{- range .Pages }}
-	<a href="{{ .RelPermalink }}" class="postpreviewlink">
-		<div class="postpreview activateposttitleunderline">
-			<div style="display: grid;grid-template-columns: auto auto 1fr;" class=" activateposttitleunderline">
-				<div class="postpreviewtime activateposttitleunderline">
-					{{- if .Param "datesinlist" -}}
-						<time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">{{ .Date.Format "2006 Jan 02" }}</time>
-					{{- end -}}
-				</div>
-				<div class="postpreviewtags">
-					{{ if .Param "taglist" }}{{ partial "taglist.html" . }}{{ end -}}
+		<a href="{{ .RelPermalink }}" class="postpreviewlink postpreviewtime">
+			<div class="postpreview activateposttitleunderline">
+				<div style="display: grid;grid-template-columns: auto auto 1fr;" class=" activateposttitleunderline">
+						{{- if .Param "datesinlist" -}}
+							<time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">{{ .Date.Format "2006 Jan 02" }}</time>
+						{{- end -}}
+					<div class="postpreviewtags">
+						{{ if .Param "taglist" }}{{ partial "taglist.html" . }}{{ end -}}
+					</div>
 					<a href="{{ .RelPermalink }}" class="postpreviewlink">
 				</div>
+				
+				{{- if .Param "authorsinlist" }}
+					{{ with .Params.authors }}
+					by 
+					{{ delimit . ", " " and " }}
+				{{end}}
+
+				<div class="postpreviewtitle">
+					{{ .Title }}
+				</div>
+
+				{{ if .Params.summary }}
+					<div class="postpreviewsummary">{{ .Params.summary }}</div>
+				{{ end }}
+
+				{{ end -}}
 			</div>
-			
-			
-			{{- if .Param "authorsinlist" }}
-				{{ with .Params.authors }}
-				by 
-				{{ delimit . ", " " and " }}
-			{{end}}
-
-			<div class="postpreviewtitle">
-				{{ .Title }}
-			</div>
-
-			{{ if .Params.summary }}
-				<div class="postpreviewsummary">{{ .Params.summary }}</div>
-			{{ end }}
-
-			{{ end -}}
-		</div>
-	</a>
+		</a>
 	{{- end }}
 {{ end }}
 
