--- a/mat383/layouts/partials/taglist.html
+++ b/mat383/layouts/partials/taglist.html
@@ -4,7 +4,7 @@
 {{- with "" }}{{ . }} {{ end -}}
     {{- range $k, $v := .Params.tags -}}
     {{- $url := printf "tags/%s" (. | urlize | lower) -}}
-    <a style="display:inline-block;"id="tag_{{ . | lower }}" href="{{ $url | absURL }}">{{ . | title }}</a>
+    <a class="tag" style="display:inline-block;"id="tag_{{ . | lower }}" href="{{ $url | absURL }}">{{ . | title }}</a>
     {{- if lt $k (sub $tagsLen 1) }} {{ end -}}
     {{- end -}}
 {{- end -}}
