--- a/mat383/static/style.css
+++ b/mat383/static/style.css
@@ -74,7 +74,6 @@ a.activepage {
 	@supports (background-image: linear-gradient(to top, rgba(0, 180, 0, 0.2), transparent)) { 
 		background-color: transparent;
 		background-image: linear-gradient(to top, rgba(0, 180, 0, 0.2), transparent);
-		/* I need to test if the @support query actually works and does what it should */
 	}
 }
 
@@ -118,14 +117,14 @@ main {
 	margin: 20px auto auto auto;
 	width: fit-content;
 	opacity: 0.4;
-	a {
-		color: #ccc;
-		background: #303030;
-	}
+}
+.posttags a {
+	color: #ccc;
+	background: #303030;
 }
 .posttags:hover {
 	opacity: 1;
-	a {
+	a { /* I don't want to use nested CSS for compatibility reasons, but I can't think of a way to achieve this without nesting */
 		color: rgb(0, 180, 0);
 		background:rgba(0, 180, 0, 0.2);
 	}
@@ -179,10 +178,9 @@ table, th, td {
 	border: 2px solid;
 	border-color: #ccc;
 	border-collapse: collapse;
-	th, td {
-		border: 1px solid;
-
-	}
+}
+th, td {
+	border: 1px solid;
 }
 em.green {
 	color: rgb(125, 255, 125);
@@ -248,15 +246,13 @@ footer a:hover {
 .postpreviewlink {
 	text-decoration-line: none;
 	color: #ccc;
-	.postpreviewtitle {
-		color: rgb(0, 180, 0);
-		padding-top: 4px;
-	}
 }
-.activateposttitleunderline:hover {
-	.postpreviewtitle {
-		text-decoration: underline;
-	}
+.postpreviewtitle {
+	color: rgb(0, 180, 0);
+	padding-top: 4px;
+}
+.activateposttitleunderline:hover .postpreviewtitle {
+	text-decoration: underline;
 }
 .postpreviewtime {
 	display: grid;
