--- a/mat383/layouts/_default/baseof.html
+++ b/mat383/layouts/_default/baseof.html
@@ -50,7 +50,7 @@
 		<!--Remark42 comments-->
 		<script> 
 			var remark_config = {
-			host: 'http://comments.mat383.com',
+			host: 'http://comments.mat383.com:8080',
 			site_id: 'comments.mat383.com',
 			theme: 'dark',
 			show_email_subscription: false,
