--- a/mat383/layouts/_default/baseof.html
+++ b/mat383/layouts/_default/baseof.html
@@ -19,7 +19,7 @@
 	<div class="otherlinks"> <!--If the current page is equal to this URL, give it a CSS class (might have to change this later)-->
 		<a href="/blog" class="{{if or (hasPrefix .RelPermalink "/blog/") (hasPrefix .RelPermalink "/tags/") }}activepage{{ end }}">Blog</a>
 		<a href="/projects" class="{{if hasPrefix .RelPermalink "/projects/" }}activepage{{ end }}">Projects</a>
-		<a href="/about" class="{{if hasPrefix .RelPermalink "/about/" }}activepage{{ end }}">About</a>
+		<a href="/contact" class="{{if hasPrefix .RelPermalink "/contact/" }}activepage{{ end }}">Contact</a>
 	</div>
 </nav>
 <body>
@@ -50,8 +50,8 @@
 		<!--Remark42 comments-->
 		<script> 
 			var remark_config = {
-			host: 'http://comments.mat383.com:8080',
-			site_id: 'comments.mat383.com',
+			host: 'http://remark42.mat383.com:8080',
+			site_id: 'remark42.mat383.com',
 			theme: 'dark',
 			show_email_subscription: false,
 			};
@@ -61,7 +61,7 @@
 	{{ end }}
 	<br>
 	<br>
-	<p class="footerhover">Made with <a href="https://gohugo.io/">Hugo</a> | <a href="https://github.com/mat-383/blog">Source code</a> | <a href="/about">Contact me</p></a>
+	<p class="footerhover">Made with <a href="https://gohugo.io/">Hugo</a> | <a href="https://github.com/mat-383/blog">Source code</a></p>
 	{{- if .Param "showrss" }}<a href="/index.xml" class="footerhover"><img src="/rss.svg" style="max-height:1.5em" alt="RSS Feed" title="Subscribe via RSS for new blog posts!"></a>{{ end }}
 	<br>
 	<a href="http://wiby.me/" class="footerhover"><img src="/images/wiby.gif"></a>
