Disabled comments on contact page

--- a/mat383/layouts/_default/baseof.html
+++ b/mat383/layouts/_default/baseof.html
@@ -45,7 +45,7 @@
 		(not (hasPrefix .RelPermalink "/tags/"))
 		(not (eq .RelPermalink "/blog/"))
 		(not (eq .RelPermalink "/projects/"))
-		(not (hasPrefix .RelPermalink "/about/"))
+		(not (hasPrefix .RelPermalink "/contact/"))
 	) }}
 		<!--Remark42 comments-->
 		<script> 
