--- a/mat383/layouts/_default/baseof.html
+++ b/mat383/layouts/_default/baseof.html
@@ -6,7 +6,8 @@
 	<link rel='alternate' type='application/rss+xml' title="{{ .Site.Title }} RSS" href='/index.xml'>
 	<link rel='stylesheet' type='text/css' href='/style.css'>
 	<link rel="icon" type="image/x-icon" href="/favicon.ico">
-	<meta name="description" content="{{ with .Params.description }}{{ . }}{{ else }}{{ .Summary }}{{ end }}">
+	<meta name="description" content="{{ .Summary }}{{ if .IsHome }}{{ end }}">
+	<!--<meta name="description" content="{{ with .Params.description }}{{ . }}{{ else }}{{ .Summary }}{{ end }}">-->
 	{{ if isset .Params "tags" }}<meta name="keywords" content="{{ with .Params.tags }}{{ delimit . ", " }}{{ end }}">
 	{{ end -}}
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -28,7 +29,7 @@
 <header>
 	{{ if .Param "tags" }}<div class="posttags"><p>Tags: {{ partial "taglist.html" . }}</p></div>{{ else if not (.Param "hidetitle")}}<br>{{ end -}}
 	{{ if not (.Param "hidetitle") }}<h1 id="tag_{{ .Title }}" class="pagetitle">{{ block "title" . }}{{ end }}</h1>{{ end }}
-	{{ if .Param "summary" }}<p class="pagesummary">{{ .Summary }}</p>{{ end }}
+	{{ if not (.Param "hidesummary") }}<p class="pagesummary">{{ .Summary }}</p>{{ end }}
 </header>
 {{ if .IsHome }}
 {{ end }}
