--- a/mat383/static/style.css
+++ b/mat383/static/style.css
@@ -43,6 +43,7 @@ a:hover:not(.postpreviewlink) {
 /* Headerbar stuff */
 .navbar {
 	background-color: #202020;
+	padding-top: 2px;
 }
 .navbarcontent {
 	max-width: 900px;
