--- a/mat383/static/style.css
+++ b/mat383/static/style.css
@@ -19,6 +19,8 @@ html {
 main {
 	margin: auto;
 	max-width: 800px;
+	padding-left: 10px;
+	padding-right: 10px;
 }
 body {
 	margin: 0;
@@ -356,5 +358,9 @@ footer a:hover {
 		flex-direction: column;
 		align-items: center;
 		row-gap: 4px;
+	}
+	main {
+		padding-left: 5px;
+		padding-right: 5px;
 	}
 }
