--- a/mat383/static/style.css
+++ b/mat383/static/style.css
@@ -15,6 +15,7 @@ html {
 	background-color: #121212;
 	font-family: sans-serif;
 	color: #ccc;
+	line-height: 25px;
 }
 main {
 	margin: auto;
@@ -114,13 +115,13 @@ a.activepage {
 .tag, .tagcloud li {
 	background:rgba(0, 180, 0, 0.2);
 	border-radius: 3px;
-	padding: 4px 5px 4px 5px;
+	padding: 1px 6px 1px 6px;
 	
 }
 
 .posttags {
 	text-align: center;
-	margin: 20px auto auto auto;
+	margin: 30px auto 30px auto;
 	width: fit-content;
 	opacity: 0.4;
 }
@@ -140,10 +141,11 @@ a.activepage {
 	font-weight: normal;
 	font-size: 48px;
 	margin-top: 15px;
+	margin-bottom: 45px;
 }
 .pagesummary {
 	font-style: italic;
-	margin: auto;
+	margin: auto auto 40px auto;
 	max-width: 500px;
 	padding: 0 25px 0 25px;
 	text-align: center;
@@ -239,9 +241,9 @@ footer a:hover {
 	border-width: 0px 0px 0px 3px;
 	border-style: solid;
 	border-color: rgb(0, 180, 0);
-	padding: 3px 10px 5px 8px;
+	padding: 2px 10px 4px 8px;
     display: inline-block;
-	flex-direction: column;
+	flex-direction: column; /* this may not be necessary */
 }
 .postpreview:hover {
 	background-color: rgba(0, 180, 0, 0.2);
@@ -256,7 +258,7 @@ footer a:hover {
 }
 .postpreviewtitle {
 	color: rgb(0, 180, 0);
-	padding-top: 4px;
+	padding-top: 0px;
 }
 .activateposttitleunderline:hover .postpreviewtitle {
 	text-decoration: underline;
@@ -266,16 +268,16 @@ footer a:hover {
 	place-items: center;
 	padding-right: 4px;
 	padding-bottom: 2px;
-	padding: 1px 4px 0px 0;
+	padding: 0px 4px 0 0;
 }
 .postpreviewtags .tag {
-	padding: 2px 3px 2px 3px;
+	padding: 0 4px 0 4px;
 }
 .postpreviewtime, .postpreviewtags {
 	font-size: 12px;
 }
 .postpreviewsummary {
-	padding-top: 5px;
+	padding-top: 0px;
 }
 
 /* For TAGLIST.HTML */
