Added 512kb club badge :D

--- a/mat383/layouts/_default/baseof.html
+++ b/mat383/layouts/_default/baseof.html
@@ -67,7 +67,10 @@
 	<p class="footerhover">Made with <a href="https://gohugo.io/">Hugo</a> | <a href="https://github.com/mat-383/blog">Source code</a></p>
 	{{- if .Param "showrss" }}<a href="/index.xml" class="footerhover"><img src="/rss.svg" style="max-height:1.5em" alt="RSS Feed" title="Subscribe via RSS for new blog posts!"></a>{{ end }}
 	<br>
-	<a href="http://wiby.me/" class="footerhover"><img src="/images/wiby.gif" alt="Wiby, the classic search engine"></a>
+
+	<div class="footerbadges">
+		<a href="https://512kb.club/" class="footerhover"><img src="/images/green-team.gif" alt="The 512KB Club"></a>
+		<a href="http://wiby.me/" class="footerhover"><img src="/images/wiby.gif" alt="Wiby, the classic search engine"></a></div>
 </footer>
 {{ end }}
 </body>
