--- a/mat383/static/style.css
+++ b/mat383/static/style.css
@@ -65,36 +65,44 @@ a:hover:not(.postpreviewlink) {
 	font-size: 150%;
 	font-weight: bold;
 	color: rgb(0, 180, 0);
+	transition: 0.4s;
 }
 .otherlinks {
 	display: flex;
 	gap: 20px;
 	order: 2;
 }
-/* Make the hover navbar link bright white */
 .navbarcontent a:hover{
 	color: rgb(240, 240, 240);
 	text-decoration-line: none;
 }
-/* Give all the other navbar links the white underline */
-.otherlinks a:hover {
-	border-color: rgb(240, 240, 240);
-	border-width: 0 0 2px 0;
-	background-image: none;
-	text-decoration-line: none;
-}
-/* Make the active page navbar link green */
 a.activepage {
 	color: rgb(0, 180, 0);
 	border-color: rgb(0, 180, 0);
 	border-width: 0 0 2px 0;
 	text-decoration-line: none;
+}
+.otherlinks a {
+	border-color: rgb(240, 240, 240);
+	border-width: 0 0 2px 0;
+	background-image: none;
+	text-decoration-line: none;
+}
+.otherlinks a:not(.activepage):not(:hover) {
+	border-color: transparent;
+	border-width: 0 0 2px 0;
+	background-image: none;
+	text-decoration-line: none;
+	transition: 0.4s;
+}
+.activepage:not(:hover) {
+	border-color: rgb(0, 180, 0);
 	@supports (background-image: linear-gradient(to top, rgba(0, 180, 0, 0.2), transparent)) { 
 		background-color: transparent;
 		background-image: linear-gradient(to top, rgba(0, 180, 0, 0.2), transparent);
 	}
+	transition: 0.4s;
 }
-
 
 
 
@@ -128,17 +136,24 @@ a.activepage {
 	width: fit-content;
 	opacity: 0.4;
 }
-.posttags a {
-	color: #ccc;
-	background: #303030;
-}
-.posttags:hover {
+.posttags {
 	opacity: 1;
 	a { /* I don't want to use nested CSS for compatibility reasons, but I can't think of a way to achieve this without nesting */
 		color: rgb(0, 180, 0);
 		background:rgba(0, 180, 0, 0.2);
 	}
 }
+.posttags:not(:hover) {
+	opacity: 0.5;
+	transition: 0.4s;
+	a {
+		background: #303030;
+		color: #ccc;
+		opacity: 0.75;
+	}
+}
+
+
 .pagetitle {
 	text-align: center;
 	font-weight: normal;
@@ -221,14 +236,16 @@ svg {
 	font-style: italic;
 }
 
+
+.footerhover:not(:hover) {
+	opacity: 0.5;
+	transition: 0.4s;
+}
 footer {
 	text-align: center;
 	font-size: 14px;
 	clear: both;
 	margin-bottom: 100px;
-}
-.footerhover:not(:hover) {
-	opacity: 0.5;
 }
 footer a {
 	color: #ccc;
@@ -243,15 +260,21 @@ footer a:hover {
 /* Post previews */
 .postpreview {
 	list-style-type: none;
-	margin: auto 20px 10px 20px;
+	margin: auto 20px 10px 10px;
 	border-width: 0px 0px 0px 3px;
 	border-style: solid;
 	border-color: rgb(0, 180, 0);
 	padding: 2px 10px 4px 8px;
     display: inline-block;
 	flex-direction: column; /* this may not be necessary */
+	background-size: 20px auto;
+	transition: margin-left 0.1s, background-size 0.3s;
 }
 .postpreview:hover {
+	margin-left: 15px;
+	transition-timing-function: ease-out;
+	background-size: 100% auto;
+	background-repeat: no-repeat;
 	background-color: rgba(0, 180, 0, 0.2);
 	@supports (background-image: linear-gradient(to right, rgba(0, 180, 0, 0.2), transparent)) {
 		background-color: transparent;
