--- a/mat383/static/style.css
+++ b/mat383/static/style.css
@@ -339,6 +339,77 @@ footer a:hover {
 	max-width: 135px;
 }
 
+/* Load comments button styling */
+.loadcommentsbutton {
+	margin-top: 15px;
+	padding: 2px 13px 2px 13px;
+	max-width: 800px;
+	border-radius: 5px;
+	background-color: #202020;
+	border: 2px solid rgb(0, 180, 0);
+	.loadcommentsicon1 {
+		opacity: 0;
+	}
+	.loadcommentsicon2 {
+		opacity: 1;
+	}
+	p {
+		color: rgb(0, 180, 0);
+	}
+}
+.loadcommentsbutton:not(:hover) {
+	border: 2px solid transparent;
+	.loadcommentsicon1 {
+		opacity: 1;
+		transition: 0.2s;
+	}
+	.loadcommentsicon2 {
+		opacity: 0;
+		transition: 0.2s;
+	}
+	p {
+		color: #ccc;
+		transition: 0.2s;
+	}
+	transition: 0.2s;
+}
+.loadcommentsbutton:hover {
+	.loadcommentsicons {
+		animation: shake 0.15s;
+		animation-timing-function: linear;
+	}
+}
+.loadcommentsbutton p {
+	display: inline-block;
+	text-align: center;
+	font-size: large;
+	vertical-align: middle;
+}
+.loadcommentsicons {
+	display: inline-block;
+	vertical-align: middle;
+	margin-left: 7px;
+	position: relative;
+}
+.loadcommentsicons img {
+	max-height: 2.75em;
+}
+.loadcommentsicon1 {
+	opacity: 1;
+	position: relative;
+}
+.loadcommentsicon2 {
+	opacity: 0;
+	position: absolute;
+	top: 0;
+}
+
+/* Remark42 comment box styling (can't really style it much yet) */
+.remark42 {
+	margin: auto;
+	max-width: 800px;
+}
+
 @media (max-width: 550px) {
 	.homeimage {
 		max-width: 192px;
@@ -379,6 +450,26 @@ footer a:hover {
 		display: block;
 		float: none;
 	}
+	.loadcommentsbutton {
+		padding: 0px 5px 0px 5px;
+	}
+	.loadcommentsbutton p {
+		font-size: medium;
+	}
+	.loadcommentsicons {
+		margin-left: 4px;
+	}
+	.loadcommentsicons img {
+		max-height: 2em;
+	}
+}
+@media (max-width: 200px) {
+	.loadcommentsbutton p {
+		margin: 7px;
+	}
+	.loadcommentsicons {
+		display: none; /* screw this */
+	}
 }
 /* Suuuuuper small screens, like smartwatches lol */
 @media (max-width: 170px) {
@@ -394,4 +485,12 @@ footer a:hover {
 		padding-left: 5px;
 		padding-right: 5px;
 	}
+}
+
+@keyframes shake {
+	0% { transform: rotate(0deg) scale(1); }
+	2% { transform: rotate(30deg) scale(0.75); }
+	30% { transform: rotate(-35deg) scale(0.75); }
+	80% { transform: rotate(5deg); }
+	100% { transform: rotate(0deg)  scale(1); }
 }
